--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="backdrop-blur-xs w-480 h-270 bg-gray-950 bg-cover bg-[url('./bg-consoles.jpg')] bg-repeat">
+  <body class="bg-gray-950 bg-[url('./bg-consoles1.jpg')] bg-repeat">
+    <!--<div class="bg-gray-950 backdrop-blur-lg w-auto h-auto"></div>--> 
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
